--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@supabase/supabase-js": "^1.32.2",
+    "@vercel/analytics": "^1.0.1",
     "next": "^12.1.1",
     "react": "^17.0.2",
     "react-awesome-lightbox": "^1.8.1",
